09/06 - cleaup code
